# simulacra

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
benches/: event_queue.rs  failure_injection.rs  network_broadcast.rs  task_gossip.rs
docs/: perf-baseline.md
examples/: bandwidth_saturation.rs  failure_injection.rs  gossip.rs  leader_election.rs  request_reply_retry.rs  wan_bottleneck.rs
src/: lib.rs  parallel.rs  queue.rs  rng.rs  scenario.rs  sim.rs  task.rs  time.rs  trace.rs
src/net/: latency.rs  mod.rs  node.rs  topology.rs  traced.rs
tests/: determinism.rs
