[package]
name = "simulacra"
version = "0.1.0"
edition = "2024"
description = "A deterministic discrete-event simulation engine for message flow across large computer networks"
license = "MIT"
readme = "README.md"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "event_queue"
harness = false

[[bench]]
name = "network_broadcast"
harness = false

[[bench]]
name = "task_gossip"
harness = false
