[package]
name = "simulacra"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Julian Bravard <julian.bravard@gmail.com>"]
description = "A deterministic discrete-event simulation engine for message flow across large computer networks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbravar/simulacra"
homepage = "https://github.com/jbravar/simulacra"
documentation = "https://docs.rs/simulacra"
keywords = ["simulation", "discrete-event", "deterministic", "network", "async"]
categories = ["simulation", "asynchronous", "network-programming"]

# Build docs.rs with all features so the serde-gated trace JSON / replay
# API is visible — the default feature set is empty, so without this the
# published docs would hide a core part of the crate.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
rand = "0.10"
rand_chacha = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "event_queue"
harness = false

[[bench]]
name = "network_broadcast"
harness = false

[[bench]]
name = "task_gossip"
harness = false
