[package]
name = "simulacra"
version = "0.2.0-dev"
edition = "2024"
rust-version = "1.88"
authors = ["Julian Bravard <julian.bravard@gmail.com>"]
description = "A deterministic discrete-event simulation engine for message flow across large computer networks"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jbravar/simulacra"
homepage = "https://github.com/jbravar/simulacra"
documentation = "https://docs.rs/simulacra"
keywords = ["simulation", "discrete-event", "deterministic", "network", "async"]
categories = ["simulation", "asynchronous", "network-programming"]

# Build docs.rs with all features so the serde-gated trace JSON / replay
# API is visible — the default feature set is empty, so without this the
# published docs would hide a core part of the crate.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
rand = "0.10"
rand_chacha = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "event_queue"
harness = false

[[bench]]
name = "network_broadcast"
harness = false

[[bench]]
name = "task_gossip"
harness = false

[lints.clippy]
# https://emschwartz.me/your-clippy-config-should-be-stricter/
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "warn"
unwrap_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
get_unwrap = "warn"
unwrap_in_result = "warn"
unchecked_time_subtraction = "warn"
panic_in_result_fn = "warn"
# Optional - see post for caveats
expect_used = "warn"
arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "warn"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
large_futures = "warn"

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
float_cmp = "warn"
float_cmp_const = "warn"
lossy_float_literal = "warn"
cast_sign_loss = "warn"
invalid_upcast_comparisons = "warn"
# Optional - these effectively force you to document numeric invariants
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
iter_not_returning_iterator = "warn"
expl_impl_clone_on_copy = "warn"
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

# https://billylevin.dev/posts/clippy-config/
# Group lints. The `restriction` group is intentionally NOT blanket-enabled
# (clippy itself warns against that via `blanket_clippy_restriction_lints`);
# the restriction lints we want are cherry-picked explicitly above.
pedantic = { level = "warn", priority = -1 }
# save this one for personal projects maybe :)
nursery = { level = "warn", priority = -2 }

# Categorically inapplicable to this crate: the simulation is single-threaded
# by design (custom no-op waker, one event loop — handler futures are never
# sent across threads), so `future_not_send` is pure noise here. See
# DESIGN.md "No real async runtime".
future_not_send = "allow"
